--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col s6 m4" *ngFor="let pokemon of pokemonList">
-      <div class="card horizontal">
+      <div class="card horizontal" pkmnBorderCard>
         <div class="card-image">
           <img [src]="pokemon.picture" />
         </div>
