--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -34,8 +34,9 @@
             </tbody>
           </table>
         </div>
-        <div class="card-action">
+        <div class="card-action" style="cursor: pointer;">
           <a (click)="goToPokemonList()">Retour</a>
+          <a (click)="goToEditPokemon(pokemon)">Editer</a>
         </div>
       </div>
     </div>
