--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col s6 m4" *ngFor="let pokemon of pokemonList">
-      <div (click)="goToPokemon(pokemon)" class="card horizontal" pkmnBorderCard>
+      <div (click)="goToPokemon(pokemon)" class="card horizontal" pkmnBorderCard style="cursor: pointer;">
         <div class="card-image">
           <img [src]="pokemon.picture" />
         </div>
