--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -21,8 +21,8 @@
 </div>
 
 <a 
-  class="btn-floating btn-large waves-effect waves-light red depth-3"
-  style="position:fixed;bottom:25px;right:25px"
+  class="btn-floating btn-large waves-effect waves-light teal depth-3"
+  style="position:fixed;bottom:25px;right:25px;color:white;font-size:2em;"
   routerLink="/pokemon/add"
-  >➕
+  >+
 </a>
