--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <div class="row">
+
+    <app-search-pokemon></app-search-pokemon>
+    
     <div class="col s6 m4" *ngFor="let pokemon of pokemonList">
       <div (click)="goToPokemon(pokemon)" class="card horizontal" pkmnBorderCard style="cursor: pointer;">
         <div class="card-image">
