--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,16 +5,16 @@
       <span class="card-title">Page de connexion</span>
       <p><em>{{message}}</em></p>
     </div>
-          <form #loginForm="ngForm">
-        <div>
-                  <label for="name">Name</label>
-          <input type="text" id="name" [(ngModel)]="name" name="name" required>
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input type="password" id="password" [(ngModel)]="password" name="password" required>
-        </div>
-      </form>
+    <form #loginForm="ngForm" class="card-content">
+      <div>
+                <label for="name">Name</label>
+        <input type="text" id="name" [(ngModel)]="name" name="name" required>
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" required>
+      </div>
+    </form>
     <div class="card-action center">
       <a (click)="login()" class="waves-effect waves-light btn"  *ngIf="!auth.isLoggedIn">Se connecter</a>
       <a (click)="logout()" *ngIf="auth.isLoggedIn">Se déconnecter</a>
